--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # This .gitignore is appropriate for repositories deployed to GitHub Pages and using
 # a Gemfile as specified at https://github.com/github/pages-gem#conventional
 
+# Ignore Obsidian/VS Code settings (safe to regenerate on each device)
+.obsidian/
+.vscode/
+
+# Windows system file
+Thumbs.db
+
 # Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
 _site/
 .sass-cache/
