--- a/.github/workflows/process_recipes.yml
+++ b/.github/workflows/process_recipes.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git add recipes/
+          git add .
           if git diff --cached --quiet; then
             echo "No new recipes."
             echo "changed=false" >> $GITHUB_OUTPUT
